# oniondao-badge

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
case/: badge-v2.stl  badge-v2~.skp  badge.skp  onion-badge-topplate.stl  onion-badge-tray.stl  onion-badge.f3d  onion-badge.stl
docs/: CONTRIBUTING.md  HARDWARE.md  MODULES.md  PINOUT.md
pcb/: CC1101_MOD.kicad_sch  SOUND_MOD.kicad_sch  null badge.html  null-city-badge.kicad_pcb  null-city-badge.kicad_pro  null-city-badge.kicad_sch  oniondao badge.html  oniondao-badge.kicad_pcb  oniondao-badge.kicad_pro  oniondao-badge.kicad_sch
pcb/production/: bom-list_cc1101.xlsx  bom-list_lanyard.xlsx  bom-list_lanyard_new.xlsx  bom-list_sound.xlsx  netlist.ipc
presentations/: ghost-key-workshop.html  tamagonion-workshop.html
skills/tamagonion/: SKILL.md
software/: README.md
software/components/Adafruit_BusIO/: CMakeLists.txt
software/components/Adafruit_GFX/: CMakeLists.txt
software/components/GxEPD2/: CMakeLists.txt
software/components/SparkFun_ATECCX08a_Arduino_Library/: CMakeLists.txt
software/examples/basic-menu-adjustable-homescreen/: README.md
software/examples/basic-menu-adjustable-homescreen/badge-art/: badge_art.py
software/examples/basic-menu-adjustable-homescreen/docs/: beginner.md  espnow-ux-testing.md  guide.md  hardware-reference.md  project.md
software/examples/basic-menu-adjustable-homescreen/firmware/: CMakeLists.txt  platformio.ini
software/examples/basic-menu-adjustable-homescreen/firmware/main/: CMakeLists.txt  badge_pins.h  main.cpp  mqtt_config.h
software/examples/basic-menu-adjustable-homescreen/firmware/src/: main.cpp
software/examples/ping-server/firmware/: CMakeLists.txt  sdkconfig.defaults
software/examples/ping-server/firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
software/guides/: esp-idf-vscode-setup.md
software/mods/check-in-beacon-c3/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.verify
software/mods/check-in-beacon-c3/build-verify/: config.env  kconfigs.in  kconfigs_projbuild.in
software/mods/check-in-beacon-c3/build-verify/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
software/mods/check-in-beacon-c3/build-verify/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
software/mods/check-in-beacon-c3/build-verify/log/: idf_py_stderr_output_31663  idf_py_stdout_output_31663
software/mods/check-in-beacon-c3/main/: CMakeLists.txt  beacon_config.h.example  main.cpp
software/mods/check-in-beacon-c3/scripts/: build-flash.sh
software/mods/onion-os/: .gitignore  API.md  CMakeLists.txt  README.md  sdkconfig.defaults
software/mods/onion-os/main/: CMakeLists.txt  badge_pins.h  idf_component.yml  logo_bitmap.h  main.cpp  onion_config.h.example
software/mods/onion-os/scripts/: README.md  build-flash.sh  checkin-range.lua  eink-demo.lua  espnow-beacon.lua  image-browser.lua  monitor-serial.sh  tamagonion.lua
software/mods/pin-test/: README.md
software/mods/pin-test/arduino/: pin_test.ino
software/mods/pin-test/components/Adafruit_BusIO/: Adafruit_I2CDevice.cpp  Adafruit_SPIDevice.cpp  Adafruit_SPIDevice.h  library.properties
software/mods/pin-test/components/Adafruit_GFX/: Adafruit_SPITFT.cpp  library.properties
software/mods/pin-test/components/Adafruit_GFX/Fonts/: FreeMono12pt7b.h  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeMonoBoldOblique18pt7b.h  FreeMonoBoldOblique24pt7b.h  FreeMonoBoldOblique9pt7b.h  FreeMonoOblique12pt7b.h  FreeMonoOblique18pt7b.h  FreeMonoOblique24pt7b.h  FreeMonoOblique9pt7b.h  FreeSans12pt7b.h  FreeSans18pt7b.h  FreeSans24pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  (+29 more)
software/mods/pin-test/components/GxEPD2/: CMakeLists.txt  CONTRIBUTING.md  ConnectingHardware.md  GxEPD2.h  GxEPD2_3C.h  GxEPD2_4C.h  GxEPD2_7C.h  GxEPD2_EPD.cpp  GxEPD2_EPD.h  GxEPD2_GFX.h  README.md  library.properties
software/mods/pin-test/docs/: testing-guide.md
software/mods/pin-test/firmware/: CMakeLists.txt  sdkconfig.defaults
software/mods/pin-test/firmware/main/: CMakeLists.txt  main.cpp
software/mods/tamagotchi/: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
software/mods/tamagotchi/main/: CMakeLists.txt  idf_component.yml  main.cpp
(+92 files in other folders)
